Fix prices overflowing in some widths in the Order summary panel (https://github.com/woocommerce/woocommerce-blocks/pull/2178)

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/style.scss
@@ -77,16 +77,17 @@
 		padding-right: $gap-small;
 	}
 
+	.wc-block-order-summary-item__header {
+		display: flex;
+	}
+
 	.wc-block-product-name {
-		display: inline;
+		flex-grow: 1;
+		margin-right: 0.5em;
 	}
 
 	.wc-block-order-summary-item__prices {
 		font-size: 0.875em;
-	}
-
-	.wc-block-order-summary-item__total-price {
-		float: right;
 	}
 }
 
